Update the native build to use JPMS modules.